fixed: endpoint get all games and create game
